.kubernetes/kubeadm/laravel-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
  labels:
    app: laravel
spec:
  selector:
    app: laravel
  ports:
  - port: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  labels:
    app: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: fpm
        image: glebsvitelskiy/laravel
        ports:
        - containerPort: 9000
          name: fpm
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
        readinessProbe:
          httpGet:
            port: 80
            path: up
      os:
        name: linux
      volumes:
      - name: static-files
        emptyDir:
          sizeLimit: 100Mi
      - name: nginx-configuration
        configMap:
          name: nginx
