.kubernetes/kubeadm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: laravel.tableride.app
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: laravel
              port:
                number: 80
  tls:
    - hosts:
        - laravel.tableride.app
      secretName: laravel-tls
